# 2d-multi-robot-simulator

./: .gitignore  NOTES.md  README.md  TODO.md  compile.sh  install_requirements.sh  start.sh
.github/workflows/: cmake-single-platform.yml
src/ros_2d_multi_robot_simulator/: CMakeLists.txt  package.xml
src/ros_2d_multi_robot_simulator/configs/: env1.yaml
src/ros_2d_multi_robot_simulator/launch/: robot_simulator.launch
src/ros_2d_multi_robot_simulator/src/: debug.h  env1.yaml  main.cpp  map_publisher.cpp  robsim_node.cpp
src/ros_2d_multi_robot_simulator/src/roblibs/: grid_map.cpp  grid_map.h  main.cpp  simulator.cpp
src/ros_2d_multi_robot_simulator/urdf/: simple_circle_robot.urdf
