<?xml version="1.0"?>
<package format="2">
  <name>ros_2d_multi_robot_simulator</name>
  <version>1.0.0</version>
  <description>2d_multi_robot_simulator package made for the Robot Programming course</description>

  <maintainer email="frasca.1836098@studenti.uniroma1.it">Emanuele Frasca</maintainer>
  <license>MIT</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>amcl</build_depend> -->
  <!-- <build_depend>map_server</build_depend> -->
  <!-- <build_depend>robot_state_publisher</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
 <!--  <build_depend>joint_state_publisher</build_depend>
  <build_depend>move_base</build_depend> -->
  <!-- <build_depend>stage_ros</build_depend> -->

  <!-- <build_export_depend>amcl</build_export_depend>
  <build_export_depend>map_server</build_export_depend> -->
  <!-- <build_export_depend>robot_state_publisher</build_export_depend> -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <!-- <build_export_depend>joint_state_publisher</build_export_depend> -->
  <!-- <build_export_depend>move_base</build_export_depend> -->
  <!-- <build_export_depend>stage_ros</build_export_depend> -->

  <!-- <exec_depend>amcl</exec_depend> -->
  <!-- <exec_depend>map_server</exec_depend> -->
  <!-- <exec_depend>robot_state_publisher</exec_depend> -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <!-- <exec_depend>joint_state_publisher</exec_depend> -->
  <!-- <exec_depend>move_base</exec_depend>
       <exec_depend>stage_ros</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
